# bank-fetch

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/fetch/: __main__.py
src/fetch/api/: client.py  enrollment.py
src/fetch/app/: __init__.py  app.py  context.py  errors.py
src/fetch/cmd/: bf.py  wrappers.py
src/fetch/cmd/commands/: add.py  config.py  disable.py  edit.py  errors.py  fetch.py  list_banks.py  remove.py  wrappers.py
src/fetch/commands/: add.py  config.py
src/fetch/common/: config.py  keys.py
src/fetch/server/: server.py
src/fetch/templates/: index.html
static/: index.js
tests/fetch/common/: config_test.py
