
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-fetch"
version = "0.0.1"
authors = [
  { name="Jackson Burns", email="jc3urns@gmail.com" },
]
dependencies = [
  "blinker==1.9.0",
  "certifi==2025.4.26",
  "cffi==1.17.1",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "cryptography==45.0.3",
  "Flask==3.1.1",
  "idna==3.10",
  "itsdangerous==2.2.0",
  "jaraco.classes==3.4.0",
  "jaraco.context==6.0.1",
  "jaraco.functools==4.1.0",
  "jeepney==0.9.0",
  "Jinja2==3.1.6",
  "keyring==25.6.0",
  "MarkupSafe==3.0.2",
  "more-itertools==10.7.0",
  "pycparser==2.22",
  "requests==2.32.3",
  "SecretStorage==3.3.3",
  "urllib3==2.4.0",
  "Werkzeug==3.1.3"
]
description = "A console command to automate the fetching of bank transactions and other data"
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
bf = "fetch.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
fetch = ["static/*", "templates/*"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/jcburns-vt/bank-fetch"
